# tra-go

./: .env.tempate  .env.template  .gitignore  .markdownlint.json  .pre-commit-config.yaml  LICENSE  Makefile  README.md  check this for any problems.txt  notes.md  notes_found.md  poetry_commands  pyproject.toml  requirements.txt  script_1.py  script_2.py  script_3.py  tens.txt  todo.md  workflow.md
.envs/: config.env.template  model.env.template
.github/: copilot-instructions.md
data_analysis/work - coorelation/: data - 2m - 2023-06-30.csv  data - 2m - 2023-07-01.csv  data - 2m - 2023-07-02.csv
data_analysis/work - cumulative/: 1m.csv
database/: enums.py
models/: model - 2023-08-12 11:51:45.930572.keras  model - 2023-08-13 02:29:43.188010.keras  model - 2023-08-13 02:35:47.805104.keras  model - 2023-08-13 02:37:59.448386.keras  model - 2023-08-13 02:40:40.723522.keras  model - 2023-08-13 15:01:31.041704.keras  model - 2023-08-13 15:09:26.062727.keras  model - 2023-08-13 15:10:26.352452.keras  model - 2023-08-13 15:14:49.325929.keras  model - 2023-08-13 15:18:32.327814.keras  model - 2023-08-13 15:20:00.020839.keras  model - 2023-08-13 15:21:09.421068.keras  model - 2023-08-13 15:22:13.508638.keras  model - 2023-08-13 15:23:56.360300.keras  model - 2023-08-13 15:25:26.167406.keras  model - 2023-08-13 15:27:12.084869.keras  model - 2023-08-13 15:28:33.620461.keras  model - 2023-08-13 21:20:18.479448.keras  model - 2023-08-13 21:24:11.674108.keras  model - 2023-08-13 21:26:30.561595.keras  model - 2023-08-13 21:30:23.388994.keras  model - 2023-08-13 21:32:05.382236.keras  model - 2023-08-13 21:33:10.229238.keras  model - 2023-08-13 21:35:01.250319.keras  model - 2023-08-13 21:36:03.759170.keras  model - 2023-08-13 21:37:07.391644.keras  model - 2023-08-14 23:03:59.535319.keras  model - 2023-08-14 23:13:03.634333.keras  model - 2023-08-14 23:16:32.153276.keras  model - 2023-08-15 18:06:14.890123.keras  model - 2023-08-15 18:25:15.842730.keras  model - 2023-08-15 18:32:51.279685.keras  model - 2023-08-15 18:44:05.704507.keras  model - 2023-08-15 18:48:13.365061.keras  model - 2023-08-15 18:50:47.474032.keras  model - 2023-08-15 18:53:21.673227.keras  model - 2023-08-15 18:54:56.569956.keras  model - 2023-08-15 19:06:03.207407.keras  model - 2023-08-15 19:08:18.028834.keras  model - 2023-08-15 19:11:45.092659.keras
models_saved/: model - 2023-08-11 02:39:02.015887.keras  model - 2023-08-12 11:53:17.923855.keras  model - 2023-08-12 11:53:27.779093.keras  model - 2023-08-12 16:24:03.279198.keras  model - 2023-08-12 16:25:01.120347.keras  model - 2023-08-13 02:27:31.010417.keras  model - 2023-08-13 02:38:29.155694.keras  model - 2023-08-13 02:43:01.701199.keras  model - 2023-08-13 02:50:35.512237.keras  model - 2023-08-13 02:51:05.481739.keras  model - 2023-08-13 02:54:29.002344.keras  model - 2023-08-13 02:55:19.030875.keras  model - 2023-08-14 22:56:36.120912.keras  model - 2023-08-14 22:59:25.087632.keras
others/: verify_venv.sh
previous files/: analysis.py  chat.txt  data from zerodha.py  deep.py  how to .txt  how to download data.txt  ideas.txt  main.py  nifty 50 stocks.txt  req.txt  sample- zerodha trade.py  sample-1.py  sample-2.py  stock_data_download.py  test.py  to do.txt  yahoo_f.py  zerodha API key.txt  zerodha_data_download.py
scripts/: script_1.py  script_2.py  script_3.py
scripts_utils/: scan_model_types.py
support/: clean_logs.py  nifty_top_companies.csv  random_simulations.py  sum_d_8.py  top_nifty_companies.csv
todo/: SaveBestComboCallback.py  feature-engg.py
tra-go/: pyproject.toml
tra-go/models_saved/: model - 2023-08-11 02:51:09.037019.keras
tra-go/tra_go/: main.py  training.py  training_yf.py
tra_go/: data_clean.py  data_download_yf  data_loader.py  data_loader_config.py  data_loader_tf.py  data_loading.py  download_data_yf.py  download_data_zerodha.py  keras_abondoned.py  keras_model.py  keras_model_band_2.py  keras_model_band_3.py  keras_model_tf.py  main.py  main_2.py  main_abandoned.py  main_training.py  main_yf.py  old_keras_model.py  test.py  tf_data_utils.py  tf_utils.py  training_yf.py  training_yf_abandoned.py  training_yf_band_3.py  training_zero.py  utils.py
(+601 files in other folders)
