[tool.poetry]
name = "tra-go"
version = "0.2.0"
description = ""
authors = ["Swaraj Bisane <bisane.swaraj@gmail.com>"]
readme = "README.md"
packages = [{include = "tra_go"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
yfinance = "^0.2.26"
kiteconnect = "^5.0.0"
python-dotenv = "^1.0.0"
requests = "2.32.3"
pytz = "^2023.3"
matplotlib = "^3.7.2"
scikit-learn = "1.5.0"
pyotp = "^2.9.0"
werkzeug = "3.0.3"
psutil = "^5.9.8"
statsmodels = "^0.14.2"
certifi = "2024.07.04"
urllib3 = "2.2.2"
cffi = "^1.16.0"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
starlette = "^0.38.2"

# TensorFlow dependencies - platform specific
tensorflow = { version = "2.15.0", markers = "sys_platform != 'darwin'" }
tensorflow-macos = { version = "2.15.0", markers = "sys_platform == 'darwin'" }
tensorflow-metal = { version = "1.2.0", markers = "sys_platform == 'darwin' and platform_machine == 'arm64'" }
tensorflow-probability = "^0.25.0"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
mypy = "^1.4.1"
pytest = "^7.4.0"
flake8 = "^6.1.0"
autoflake = "^2.3.1"
isort = "^5.13.2"
pre-commit = "^4.3.0"
pyupgrade = "^3.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
