[tool.poetry]
name = "tra-go"
version = "0.1.0"
description = ""
authors = ["Dell Laptop <bisae.swaraj@gmail.com>"]
readme = "README.md"
packages = [{include = "tra_go"}]

[tool.poetry.dependencies]
python = "^3.11"
yfinance = "^0.2.26"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
